namespace NeuroPuentesAPI.models
{
    public class Eval_Entrevista
    {
        public int Id { get; set; }
        public int EntrevistaId { get; set; }
        public float ScoreFinal { get; set; }
    }
}
