@startuml NeuroPuentes

!include style/cielo-nebuloso.puml/
skinparam backgroundColor transparent

' ========================
' FEEDBACK
' ========================
package "Feedback" {
  
  entity Feedback_Entrevista {
    +_id : INT PK
    +entrevista_id : INT FK -> Entrevistas._id
    --
    +tipo : ENUM('fortaleza','debilidad','sugerencia','general')
    +mensaje : text
    +categoria : varchar(40)
    +fecha : datetime
  }

  entity Feedback_Usuario {
    +_id : INT PK
    +usuario_id : INT FK -> Usuarios._id
    --
    +tipo : ENUM('fortaleza','debilidad','sugerencia','general')
    +mensaje : text
    +categoria : varchar(40)
    +fecha : datetime
  }

  entity Calificacion_Usuario {
    +_id : INT PK
    +usuario_id : INT FK -> Usuarios._id
    --
    +calificacion : int
    +mensaje : text
    +fecha : datetime
  }
}

' ========================
' PERSONAL
' ========================
package "Personal" {

  entity ENUM_TIPO_USUARIO <<enumEntity>>{
    Estudiante
    Supervisor
    Admin
  }

  entity Usuarios {
    +_id : INT PK
    +nombre_usuario : varchar(50) UNIQUE
    +nombre : varchar(100)
    +email : varchar(120) UNIQUE
    +password_hash : string
    +rol : ENUM_TIPO_USUARIO
    +vigencia : bool
    +fecha_registro : datetime
  }

  entity Entrevistas {
    +_id : INT PK
    +usuario_id : INT FK -> Usuarios._id
    +contexto_id : INT FK -> Contextos._id
    --
    +titulo : varchar(120)
    +descripcion : varchar(255)
    +duracion_min : float
    +numero_turnos : int
    +fecha_creacion : datetime
    +fecha_cierre : datetime
    --
    +contexto_snapshot : text
  }

  entity Dialogos {
    +_id : INT PK
    +entrevista_id : INT FK -> Entrevistas._id
    --
    +turno : int
    +sender : ENUM('user','ai')
    +texto : text
    +texto_procesado : text
    +timestamp : datetime
    +audio_url : varchar(255)
  }
}

' ========================
' ESTADÍSTICAS Y EVALUACIÓN
' ========================
package "Estadisticas" {

  entity Stats_Usuario {
    +_id : INT PK
    +usuario_id : INT FK -> Usuarios._id
    --
    +fecha_corte : datetime
    +total_entrevistas : int
    +tiempo_total_min : float
    +score_promedio : float        ' 0..100
  }

  entity Eval_Entrevista {
    +_id : INT PK
    +entrevista_id : INT FK -> Entrevistas._id
    --
    +score_final : float          ' 0..100
  }

  entity Eval_Categoria {
    +_id : INT PK
    +eval_entrevista_id : INT FK -> Eval_Entrevista._id
    --
    +categoria : varchar(40)
    +score : float                ' 0..100
  }

  entity Tips {
    +_id : INT PK
    +usuario_id : INT FK -> Usuarios._id
    +entrevista_id : INT FK -> Entrevistas._id
    --
    +titulo : varchar(80) NULL
    +contenido : text
    +categoria : varchar(40)
    +fecha : datetime
    +usado : bool
    +vigencia : bool
  }
}

' ========================
' CONTEXTOS & CARACTERÍSTICAS
' ========================
package "Contextos & Características" {

  entity ENUM_SCOPE_CONTEXTO <<enumEntity>>{
    global
    usuario
  }

  entity Contextos {
    +_id : INT PK
    --
    +nombre : varchar(80)
    +descripcion : varchar(255)
    +scope : ENUM_SCOPE_CONTEXTO
    +creado_por : INT NULL FK -> Usuarios._id
    +origen : ENUM('preset','ia','manual')
    +prompt_seed : text NULL
    +vigencia : bool
    +fecha_creacion : datetime
  }

  entity Caracteristicas {
    +_id : INT PK
    --
    +nombre : varchar(40)
    +descripcion : varchar(255)
    +grupo : varchar(255)
    +vigencia : bool
  }

  entity Caracts_Rel {
    +caracteristica_id : INT FK -> Caracteristicas._id
    +contexto_id : INT FK -> Contextos._id
    --
    * PK (caracteristica_id, contexto_id)
  }
}

' ========================
' RELACIONES
' ========================
Usuarios ||--o{ Entrevistas
Entrevistas ||--o{ Dialogos

Entrevistas ||--|| Eval_Entrevista
Eval_Entrevista ||--o{ Eval_Categoria

Entrevistas ||--o{ Feedback_Entrevista
Usuarios ||--o{ Feedback_Usuario
Usuarios ||--o{ Calificacion_Usuario

Usuarios ||--o{ Stats_Usuario

Usuarios ||--o{ Tips
Entrevistas ||--o{ Tips

Contextos ||--o{ Entrevistas

Contextos ||--o{ Caracts_Rel
Caracteristicas ||--o{ Caracts_Rel

@enduml